Let Java and Kotlin code can use generated java class.
Add Kotlin annotation processor plugin, and use it to generate Java class.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 28
     buildToolsVersion "29.0.2"
@@ -34,5 +36,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation project(':builder_annotation')
-    annotationProcessor project(':builder_processor')
+    kapt project(':builder_processor')
 }
