--- a/builder_processor/build.gradle
+++ b/builder_processor/build.gradle
@@ -1,9 +1,16 @@
 apply plugin: 'java-library'
 
+apply plugin: 'kotlin'
+
+apply plugin: 'kotlin-kapt'
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.squareup:javapoet:1.11.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'com.squareup:kotlinpoet:1.4.1'
     implementation project(':builder_annotation')
+    implementation 'com.google.auto.service:auto-service:1.0-rc6'
 }
 
 sourceCompatibility = "8"
